--- a/parallax-background/style.css
+++ b/parallax-background/style.css
@@ -1,7 +1,24 @@
-body{background:#222;color:#aaa;}
+/*CREDITS*/
+/*
+ * font from Google:Jim Nightshade
+ */
+
+
+@font-face{
+  font-family:"Jim Nightshade";
+  src:url("JimNightshade-Regular.woff");
+}
+body{
+  background:#222;
+  font-size:22px;
+  color:#eee;
+  text-shadow:0 0 2px rgb(83, 69, 209);
+  padding:0;
+  margin:0;
+}
 pre{
+  font-family:"Jim Nightshade";
   width:100vw;
-  word-wrap:wrap-word;
   background:transparent;
 }
 #parallax-box{overflow:visible;}
