--- a/single-level-dropdown-menu/ddm.css
+++ b/single-level-dropdown-menu/ddm.css
@@ -89,7 +89,7 @@ h1{margin:2em 0.4em 0 0.4em;text-align:center;color:#fff;font-size:3em;}
     height:auto;
     line-height:1em;
     
-    -webkit-transform: translaY(0);
+    -webkit-transform: translateY(0);
     transform: translateY(0);
 }
 
